<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sync_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_sync_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/ic_action_login"
        android:title="@string/action_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>